--- a/src/app/pages/layouts/login/login.component.html
+++ b/src/app/pages/layouts/login/login.component.html
@@ -181,7 +181,7 @@ transform: scale(1.5);
 <div class="container">
 <div class="screen">
   <div class="screen__content">
-    <form class="login"  >
+    <form class="login"  [formGroup]="frmLogin">
       <div class="login__field">
         <i class="login__icon fas fa-user"></i>
                   
