--- a/src/app/pages/services/components/service/service.component.html
+++ b/src/app/pages/services/components/service/service.component.html
@@ -287,12 +287,12 @@
                      
                         <p  >  <i class="fa fa-edit"
                             (click)="fillForm(ser)"
-                            style="font-size: 21px"></i>
+                            style="font-size: 21px; color: rgb(243, 25, 141)"></i>
                       &nbsp;  &nbsp; &nbsp;
-                            <i class="fa fa-edit"
+                            <i class="fa fa-remove"
                             (click)="delete(ser.id)"
                             
-                            style="font-size: 21px; color: orangered"></i>
+                            style="font-size: 21px; color: rgb(255, 0, 0)"></i>
                      </p>
                       
 
