--- a/src/app/pages/emploiyes/components/emploiyes/emploiyes.component.html
+++ b/src/app/pages/emploiyes/components/emploiyes/emploiyes.component.html
@@ -354,12 +354,12 @@
                      
                         <p  >  <i class="fa fa-edit"
                             (click)="fillForm(emp)"
-                            style="font-size: 21px"></i>
+                            style="font-size: 21px; color: rgb(243, 25, 141)"></i>
                       &nbsp;  &nbsp; &nbsp;
-                            <i class="fa fa-edit"
+                            <i class="fa fa-remove"
                             (click)="delete(emp.id)"
                             
-                            style="font-size: 21px; color: orangered"></i>
+                            style="font-size: 21px; color: rgb(255, 0, 0)"></i>
                      </p>
                       
 
