--- a/src/app/pages/type_conges/components/type-conges/type-conges.component.html
+++ b/src/app/pages/type_conges/components/type-conges/type-conges.component.html
@@ -279,12 +279,12 @@
                      
                         <p  >  <i class="fa fa-edit"
                             (click)="fillForm(type)"
-                            style="font-size: 21px"></i>
+                            style="font-size: 21px; color: rgb(243, 25, 141)"></i>
                       &nbsp;  &nbsp; &nbsp;
-                            <i class="fa fa-edit"
+                            <i class="fa fa-remove"
                             (click)="delete(type.id)"
                             
-                            style="font-size: 21px; color: orangered"></i>
+                            style="font-size: 21px; color: rgb(255, 0, 0)"></i>
                      </p>
                       
 
